[package]
name = "lau-differential-topology"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-differential-topology"
description = "Differential topology: smooth manifolds, tangent bundles, differential forms, Stokes' theorem, transversality, degree theory, and Euler characteristic"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
